2011-01-13  Richard Frith-Macdonald <rfm@gnu.org>

	* TestFramework/gnustep-tests: Add --clean option
	* TestFramework/README: Describe the fact that we leave the last
	binary behind so we can easily run gdb.  Also mention --clean

2011-02-10 19:06  David Chisnall <theraven@gna.org>

	* tools/make/trunk/configure, tools/make/trunk/configure.ac: Don't
	  depend on the existence of Object class for checking whether
	  exceptions work.

2011-01-07  Richard Frith-Macdonald <rfm@gnu.org>

	* TestFramework/example1.m:
	* TestFramework/example2.m:
	* TestFramework/example3.m:
	* TestFramework/example4.m:
	* TestFramework/example5.m:
	* TestFramework/example6.m:
	* TestFramework/example7.m:
	* TestFramework/GNUmakefile.in:
	* TestFramework/gnustep-tests:
	* TestFramework/ObjectTesting.h:
	* TestFramework/README:
	* TestFramework/runtest.sh:
	* TestFramework/Testing.h:
	Test framework scripts, headers, template, examples, documentation
	* GNUmakefile.in:
	Altered to install/uninstall test framework.

2010-12-22  Nicola Pero  <nicola.pero@meta-innovation.com>

	* configure.ac: Tidied up a few messages.
	* configure: Regenerated.

2010-10-20  Adam Fedor  <fedor@gnu.org>

	* target.make: Add c99 flag for solaris

2010-09-22 Riccardo Mottola

	* installation-domains.conf: add defaults for objc2 and
	systempreferences

2010-09-16  Richard Frith-Macdonald <rfm@gnu.org>

	* GNUstep.conf.in: revert recent changes.
	* configure.ac: revert last changes and more.
	* configure: Regenerated.
	Reverted recent changes, largely to do with remembering filesystem
	layout preferences.  Nicola pointed out that remembering preferences
	automatically might not be good, and suggested a different mechanism.
	That means current code temporarily needs a --with-layout=gnustep for
	the old behavior on most systems.

2010-09-16  Richard Frith-Macdonald <rfm@gnu.org>

	* configure.ac: Remove extra line accidentally added in preious commit.